feat: create and draw board

--- a/iceslide.html
+++ b/iceslide.html
@@ -8,7 +8,7 @@
     <script src="game.js"></script>
   </head>
   <body>
-    <canvas id="board"></canvas>
+    <canvas id="board" width="600px" height="600px"></canvas>
 
     <!-- Directions underneath the board -->
     <div id="directions">
